[gd_scene load_steps=47 format=2]

[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/lipsync default mouthshapes/rest.png" type="Texture" id=1]
[ext_resource path="res://addons/rhubarb_lipsync_integration/interface/NodeMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/rhubarb_lipsync_integration/interface/MouthIcon.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/rhubarb_lipsync_integration/RhubarbLipsyncImporter/MouthTexturesVBox.gd" type="Script" id=4]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/JetBrainsMono-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://addons/rhubarb_lipsync_integration/interface/Titlebar.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/rhubarb_lipsync_integration/RhubarbLipsyncImporter/MouthLibraryHBox.gd" type="Script" id=7]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/JetBrainsMono-Bold.tres" type="DynamicFont" id=8]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/lipsync default mouthshapes/FV.png" type="Texture" id=9]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/icons/icon_warning.png" type="Texture" id=10]
[ext_resource path="res://addons/rhubarb_lipsync_integration/RhubarbLipsyncImporter/LipsyncImporterPopup.gd" type="Script" id=11]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/icons/icon_settings.png" type="Texture" id=12]
[ext_resource path="res://addons/rhubarb_lipsync_integration/RhubarbLipsyncImporter/AnimationNameHBox.gd" type="Script" id=13]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/lipsync default mouthshapes/MBP.png" type="Texture" id=14]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/lipsync default mouthshapes/AI.png" type="Texture" id=15]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/lipsync default mouthshapes/E.png" type="Texture" id=16]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/lipsync default mouthshapes/U.png" type="Texture" id=17]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/lipsync default mouthshapes/L.png" type="Texture" id=18]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/lipsync default mouthshapes/O.png" type="Texture" id=19]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/icons/icon_save.png" type="Texture" id=20]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/icons/icon_new.png" type="Texture" id=21]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/icons/icon_delete.png" type="Texture" id=22]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/LipsyncImporterTheme.tres" type="Theme" id=23]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/icons/icon_rename.png" type="Texture" id=24]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/icons/icon_expand.png" type="Texture" id=25]
[ext_resource path="res://addons/rhubarb_lipsync_integration/RhubarbLipsyncImporter/MouthLibraryMenuButton.gd" type="Script" id=26]
[ext_resource path="res://addons/rhubarb_lipsync_integration/RhubarbLipsyncImporter/InfoHBox.gd" type="Script" id=27]
[ext_resource path="res://addons/rhubarb_lipsync_integration/RhubarbLipsyncImporter/boxes/AudioKeyHBox.gd" type="Script" id=28]
[ext_resource path="res://addons/rhubarb_lipsync_integration/RhubarbLipsyncImporter/boxes/AudioTrackHBox.gd" type="Script" id=29]
[ext_resource path="res://addons/rhubarb_lipsync_integration/RhubarbLipsyncImporter/boxes/MouthSpriteHBox.gd" type="Script" id=30]
[ext_resource path="res://addons/rhubarb_lipsync_integration/RhubarbLipsyncImporter/boxes/AnimationPlayerHBox.gd" type="Script" id=31]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/icons/icon_not.png" type="Texture" id=32]
[ext_resource path="res://addons/rhubarb_lipsync_integration/settings_popup/LipsyncSettingsPopup.tscn" type="PackedScene" id=33]
[ext_resource path="res://addons/rhubarb_lipsync_integration/RhubarbLipsyncImporter/SettingsButton.gd" type="Script" id=34]
[ext_resource path="res://addons/rhubarb_lipsync_integration/interface/RectHandlerContainer.tscn" type="PackedScene" id=35]
[ext_resource path="res://addons/rhubarb_lipsync_integration/interface/ResizableWindow.gd" type="Script" id=36]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/icons/icon_about.png" type="Texture" id=37]
[ext_resource path="res://addons/rhubarb_lipsync_integration/RhubarbLipsyncImporter/AboutButton.gd" type="Script" id=38]
[ext_resource path="res://addons/rhubarb_lipsync_integration/LipsyncAboutPopup/LipsyncAboutPopup.tscn" type="PackedScene" id=39]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/icons/plugin_icon/plugin_icon_tiny.png" type="Texture" id=40]
[ext_resource path="res://addons/rhubarb_lipsync_integration/RhubarbLipsyncImporter/tab animated_sprite/MouthFrames.gd" type="Script" id=41]
[ext_resource path="res://addons/rhubarb_lipsync_integration/assets/styles/MouthshapePreview panel.tres" type="StyleBox" id=42]
[ext_resource path="res://addons/rhubarb_lipsync_integration/interface/MouthFrameIcon.tscn" type="PackedScene" id=43]
[ext_resource path="res://addons/rhubarb_lipsync_integration/RhubarbLipsyncImporter/tab animated_sprite/AnimatedSpriteHBox.gd" type="Script" id=44]
[ext_resource path="res://addons/rhubarb_lipsync_integration/RhubarbLipsyncImporter/tab animated_sprite/SpriteAnimationHBox.gd" type="Script" id=45]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="LipsyncImporterPopup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 23 )
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": "1.x
[X] Debug wrong popup window offset
[X] Update UI text by renaming all \"lipsync\" to \"Lip Sync\".
[  ] Add support for AnimatedSprites
[X] Separate AnimatedSprite's UI by adding a TabContainer
[X] Add MouthFrameIcon scene
[X] Add FrameSelectorPopup
[  ] Create a sliced audio file everytime there's an offset, so Rhubarb doesn't lipsync all audio just for one section.

1.0
[X]OptionButton selects node.
[X]Empty editedscene doesn't provoke error.
[X]LineEdit checks if animationPlayer path is valid.
[X]LineEdit checks if animationPlayer has animationame.
[X]Application recognizes lipsync data file.
[X]Reads timestamps succesfully.
[X]AnimateButton generates lipsync animation succesfully.
[X]Add config file.
[X]Load config file everytime plugin is called.
[X]Add UI for mouthsprite libraries.
[X]Make UI Symbols for mouthshape libraries.
[X]Make mouthsprite libraries work.
[X]NodeMenus get node icon when node_type is selected."
}

[node name="Panel" type="Panel" parent="."]
margin_right = 794.0
margin_bottom = 670.0
rect_min_size = Vector2( 480, 250 )
rect_clip_content = true
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 36 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBar" parent="Panel/VBox" instance=ExtResource( 6 )]
margin_right = 774.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 0
alignment = 2
title_name = "Rhubarb Lip Sync T.P. Integration for Godot"
icon_texture = ExtResource( 40 )
window_path = NodePath("../..")

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
margin_top = 55.0
margin_right = 774.0
margin_bottom = 59.0

[node name="InfoHBox" type="HBoxContainer" parent="Panel/VBox"]
margin_top = 74.0
margin_right = 774.0
margin_bottom = 114.0
script = ExtResource( 27 )

[node name="AboutButton" type="TextureButton" parent="Panel/VBox/InfoHBox"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 37 )
script = ExtResource( 38 )
SCN_LipsyncAboutPopup = ExtResource( 39 )

[node name="AboutLabel" type="Label" parent="Panel/VBox/InfoHBox"]
margin_left = 44.0
margin_top = 10.0
margin_right = 104.0
margin_bottom = 30.0
text = "About."

[node name="SettingsButton" type="TextureButton" parent="Panel/VBox/InfoHBox"]
margin_left = 108.0
margin_right = 148.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 3
texture_normal = ExtResource( 12 )
expand = true
stretch_mode = 4
script = ExtResource( 34 )
SCN_LipsyncSettingsPopup = ExtResource( 33 )

[node name="SettingsLabel" type="Label" parent="Panel/VBox/InfoHBox"]
margin_left = 152.0
margin_top = 10.0
margin_right = 232.0
margin_bottom = 30.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningIcon" type="TextureRect" parent="Panel/VBox/InfoHBox"]
visible = false
margin_left = 236.0
margin_right = 276.0
margin_bottom = 43.0
hint_tooltip = "Rhubarb Binary File not found at path \"\", please select the filepath from Plugin Settings. (Gear Icon at left)"
texture = ExtResource( 10 )

[node name="WarningLabel" type="Label" parent="Panel/VBox/InfoHBox"]
visible = false
margin_left = 280.0
margin_right = 774.0
margin_bottom = 43.0
size_flags_horizontal = 3
autowrap = true

[node name="TabContainer" type="TabContainer" parent="Panel/VBox"]
margin_top = 129.0
margin_right = 774.0
margin_bottom = 431.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sprite" type="VBoxContainer" parent="Panel/VBox/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MouthLibraryHBox" type="HBoxContainer" parent="Panel/VBox/TabContainer/Sprite"]
margin_right = 786.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBox/TabContainer/Sprite/MouthLibraryHBox"]
margin_top = 10.0
margin_right = 200.0
margin_bottom = 30.0
text = "Mouthshape Library: "

[node name="MenuButton" type="MenuButton" parent="Panel/VBox/TabContainer/Sprite/MouthLibraryHBox"]
margin_left = 204.0
margin_right = 610.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Default"
icon = ExtResource( 25 )
flat = false
expand_icon = true
items = [ "default", null, 0, false, false, 0, 0, null, "", false ]
script = ExtResource( 26 )

[node name="SaveButton" type="TextureButton" parent="Panel/VBox/TabContainer/Sprite/MouthLibraryHBox"]
margin_left = 614.0
margin_right = 654.0
margin_bottom = 40.0
hint_tooltip = "Saves current textures to selected Mouthshape  Library."
texture_normal = ExtResource( 20 )

[node name="RenameButton" type="TextureButton" parent="Panel/VBox/TabContainer/Sprite/MouthLibraryHBox"]
margin_left = 658.0
margin_right = 698.0
margin_bottom = 40.0
hint_tooltip = "Renames selected Mouthshape Library."
texture_normal = ExtResource( 24 )

[node name="NewButton" type="TextureButton" parent="Panel/VBox/TabContainer/Sprite/MouthLibraryHBox"]
margin_left = 702.0
margin_right = 742.0
margin_bottom = 40.0
hint_tooltip = "Creates a new Mouthshape Library."
texture_normal = ExtResource( 21 )

[node name="DeleteButton" type="TextureButton" parent="Panel/VBox/TabContainer/Sprite/MouthLibraryHBox"]
margin_left = 746.0
margin_right = 786.0
margin_bottom = 40.0
hint_tooltip = "Deletes current Mouthshape Library."
texture_normal = ExtResource( 22 )

[node name="MouthPanel" type="Panel" parent="Panel/VBox/TabContainer/Sprite"]
margin_top = 44.0
margin_right = 786.0
margin_bottom = 252.0
rect_min_size = Vector2( 96, 96 )
rect_clip_content = true
size_flags_vertical = 3
custom_styles/panel = ExtResource( 42 )

[node name="MouthTextures" type="VBoxContainer" parent="Panel/VBox/TabContainer/Sprite/MouthPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 25
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
_temp_texture = ExtResource( 32 )

[node name="TopHBox" type="HBoxContainer" parent="Panel/VBox/TabContainer/Sprite/MouthPanel/MouthTextures"]
margin_right = 786.0
margin_bottom = 91.0
grow_vertical = 0
size_flags_vertical = 3

[node name="RestMouth" parent="Panel/VBox/TabContainer/Sprite/MouthPanel/MouthTextures/TopHBox" instance=ExtResource( 3 )]
margin_right = 154.0
margin_bottom = 91.0
mouth_shape = "rest"
default_mouth = ExtResource( 1 )

[node name="MBPMouth" parent="Panel/VBox/TabContainer/Sprite/MouthPanel/MouthTextures/TopHBox" instance=ExtResource( 3 )]
margin_left = 158.0
margin_right = 312.0
margin_bottom = 91.0
mouth_shape = "MBP"
default_mouth = ExtResource( 14 )

[node name="FVMouth" parent="Panel/VBox/TabContainer/Sprite/MouthPanel/MouthTextures/TopHBox" instance=ExtResource( 3 )]
margin_left = 316.0
margin_right = 470.0
margin_bottom = 91.0
mouth_shape = "FV"
default_mouth = ExtResource( 9 )

[node name="OMouth" parent="Panel/VBox/TabContainer/Sprite/MouthPanel/MouthTextures/TopHBox" instance=ExtResource( 3 )]
margin_left = 474.0
margin_right = 628.0
margin_bottom = 91.0
mouth_shape = "O"
default_mouth = ExtResource( 19 )

[node name="UMouth" parent="Panel/VBox/TabContainer/Sprite/MouthPanel/MouthTextures/TopHBox" instance=ExtResource( 3 )]
margin_left = 632.0
margin_right = 786.0
margin_bottom = 91.0
mouth_shape = "U"
default_mouth = ExtResource( 17 )

[node name="BottomVBox" type="HBoxContainer" parent="Panel/VBox/TabContainer/Sprite/MouthPanel/MouthTextures"]
margin_top = 116.0
margin_right = 786.0
margin_bottom = 208.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EtcMouth" parent="Panel/VBox/TabContainer/Sprite/MouthPanel/MouthTextures/BottomVBox" instance=ExtResource( 3 )]
margin_right = 193.0
margin_bottom = 92.0
mouth_shape = "etc"

[node name="EMouth" parent="Panel/VBox/TabContainer/Sprite/MouthPanel/MouthTextures/BottomVBox" instance=ExtResource( 3 )]
margin_left = 197.0
margin_right = 390.0
margin_bottom = 92.0
mouth_shape = "E"
default_mouth = ExtResource( 16 )

[node name="LMouth" parent="Panel/VBox/TabContainer/Sprite/MouthPanel/MouthTextures/BottomVBox" instance=ExtResource( 3 )]
margin_left = 394.0
margin_right = 587.0
margin_bottom = 92.0
mouth_shape = "L"
default_mouth = ExtResource( 18 )

[node name="AIMouth" parent="Panel/VBox/TabContainer/Sprite/MouthPanel/MouthTextures/BottomVBox" instance=ExtResource( 3 )]
margin_left = 591.0
margin_right = 786.0
margin_bottom = 92.0
mouth_shape = "AI"
default_mouth = ExtResource( 15 )

[node name="MouthSpriteHBox" type="HBoxContainer" parent="Panel/VBox/TabContainer/Sprite"]
margin_top = 256.0
margin_right = 786.0
margin_bottom = 280.0
grow_horizontal = 0
rect_clip_content = true
size_flags_vertical = 4
script = ExtResource( 30 )

[node name="Label" type="Label" parent="Panel/VBox/TabContainer/Sprite/MouthSpriteHBox"]
margin_top = 2.0
margin_right = 250.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 8 )
text = "NodePath to mouth Sprite:"

[node name="Button" parent="Panel/VBox/TabContainer/Sprite/MouthSpriteHBox" instance=ExtResource( 2 )]
margin_right = 758.0
margin_bottom = 24.0
text = "Please select a Sprite node."
expand_icon = true
NO_NODE_FOUND = "No node found at tree."
owner_reference = "anim_mouthSprite"
node_type = "Sprite"

[node name="WarningIcon" type="TextureRect" parent="Panel/VBox/TabContainer/Sprite/MouthSpriteHBox"]
margin_left = 762.0
margin_right = 786.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "No Sprite node selected. Can't proceed"
size_flags_horizontal = 0
texture = ExtResource( 10 )
expand = true

[node name="AnimatedSprite" type="VBoxContainer" parent="Panel/VBox/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimatedSpriteHBox" type="HBoxContainer" parent="Panel/VBox/TabContainer/AnimatedSprite"]
margin_right = 766.0
margin_bottom = 24.0
size_flags_horizontal = 3
script = ExtResource( 44 )

[node name="Label" type="Label" parent="Panel/VBox/TabContainer/AnimatedSprite/AnimatedSpriteHBox"]
margin_top = 2.0
margin_right = 270.0
margin_bottom = 22.0
text = "NodePath to AnimatedSprite:"

[node name="Button" parent="Panel/VBox/TabContainer/AnimatedSprite/AnimatedSpriteHBox" instance=ExtResource( 2 )]
margin_left = 274.0
margin_right = 738.0
margin_bottom = 24.0
text = "Please select an AnimatedSprite."
expand_icon = true
NO_NODE_FOUND = "No AnimatedSprite found at tree."
owner_reference = "anim_mouthAnimSprite"
node_type = "AnimatedSprite"

[node name="WarningIcon" type="TextureRect" parent="Panel/VBox/TabContainer/AnimatedSprite/AnimatedSpriteHBox"]
margin_left = 742.0
margin_right = 766.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "No Sprite node selected. Can't proceed"
size_flags_horizontal = 0
texture = ExtResource( 10 )
expand = true

[node name="SpriteAnimationHBox" type="HBoxContainer" parent="Panel/VBox/TabContainer/AnimatedSprite"]
margin_top = 28.0
margin_right = 766.0
margin_bottom = 52.0
size_flags_horizontal = 3
script = ExtResource( 45 )

[node name="Label" type="Label" parent="Panel/VBox/TabContainer/AnimatedSprite/SpriteAnimationHBox"]
margin_top = 2.0
margin_right = 250.0
margin_bottom = 22.0
text = "AnimatedSprite Animation:"

[node name="MenuButton" type="MenuButton" parent="Panel/VBox/TabContainer/AnimatedSprite/SpriteAnimationHBox"]
margin_left = 254.0
margin_right = 738.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Please select an AnimatedSprite above before selecting animation."
icon = ExtResource( 25 )
flat = false
clip_text = true
align = 0
expand_icon = true

[node name="WarningIcon" type="TextureRect" parent="Panel/VBox/TabContainer/AnimatedSprite/SpriteAnimationHBox"]
margin_left = 742.0
margin_right = 766.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "No AnimatedSprite node selected. Can't proceed"
size_flags_horizontal = 0
texture = ExtResource( 10 )
expand = true

[node name="Panel" type="Panel" parent="Panel/VBox/TabContainer/AnimatedSprite"]
margin_top = 56.0
margin_right = 766.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 42 )

[node name="MouthFrames" type="VBoxContainer" parent="Panel/VBox/TabContainer/AnimatedSprite/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 41 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopHBox" type="HBoxContainer" parent="Panel/VBox/TabContainer/AnimatedSprite/Panel/MouthFrames"]
margin_right = 766.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RestMouth" parent="Panel/VBox/TabContainer/AnimatedSprite/Panel/MouthFrames/TopHBox" instance=ExtResource( 43 )]
margin_right = 150.0
margin_bottom = 100.0

[node name="MBPMouth" parent="Panel/VBox/TabContainer/AnimatedSprite/Panel/MouthFrames/TopHBox" instance=ExtResource( 43 )]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 100.0
mouth_shape = "MBP"
default_mouth = 1

[node name="FVMouth" parent="Panel/VBox/TabContainer/AnimatedSprite/Panel/MouthFrames/TopHBox" instance=ExtResource( 43 )]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 100.0
mouth_shape = "FV"
default_mouth = 2

[node name="OMouth" parent="Panel/VBox/TabContainer/AnimatedSprite/Panel/MouthFrames/TopHBox" instance=ExtResource( 43 )]
margin_left = 462.0
margin_right = 612.0
margin_bottom = 100.0
mouth_shape = "O"
default_mouth = 3

[node name="UMouth" parent="Panel/VBox/TabContainer/AnimatedSprite/Panel/MouthFrames/TopHBox" instance=ExtResource( 43 )]
margin_left = 616.0
margin_right = 766.0
margin_bottom = 100.0
mouth_shape = "U"
default_mouth = 4

[node name="BottomHBox" type="HBoxContainer" parent="Panel/VBox/TabContainer/AnimatedSprite/Panel/MouthFrames"]
margin_top = 104.0
margin_right = 766.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EtcMouth" parent="Panel/VBox/TabContainer/AnimatedSprite/Panel/MouthFrames/BottomHBox" instance=ExtResource( 43 )]
margin_right = 188.0
margin_bottom = 100.0
mouth_shape = "etc"
default_mouth = 5

[node name="EMouth" parent="Panel/VBox/TabContainer/AnimatedSprite/Panel/MouthFrames/BottomHBox" instance=ExtResource( 43 )]
margin_left = 192.0
margin_right = 380.0
margin_bottom = 100.0
mouth_shape = "E"
default_mouth = 6

[node name="LMouth" parent="Panel/VBox/TabContainer/AnimatedSprite/Panel/MouthFrames/BottomHBox" instance=ExtResource( 43 )]
margin_left = 384.0
margin_right = 572.0
margin_bottom = 100.0
mouth_shape = "L"
default_mouth = 7

[node name="AIMouth" parent="Panel/VBox/TabContainer/AnimatedSprite/Panel/MouthFrames/BottomHBox" instance=ExtResource( 43 )]
margin_left = 576.0
margin_right = 766.0
margin_bottom = 100.0
mouth_shape = "AI"
default_mouth = 8

[node name="AnimationPlayerHBox" type="HBoxContainer" parent="Panel/VBox"]
margin_top = 446.0
margin_right = 774.0
margin_bottom = 470.0
grow_horizontal = 0
alignment = 2
script = ExtResource( 31 )

[node name="Label" type="Label" parent="Panel/VBox/AnimationPlayerHBox"]
margin_top = 2.0
margin_right = 280.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "NodePath to AnimationPlayer:"

[node name="Button" parent="Panel/VBox/AnimationPlayerHBox" instance=ExtResource( 2 )]
margin_left = 284.0
margin_right = 746.0
margin_bottom = 24.0
text = "Please select an AnimationPlayer node."
expand_icon = true
NO_NODE_FOUND = "No node found at tree."
owner_reference = "anim_animationPlayer"
node_type = "AnimationPlayer"

[node name="WarningIcon" type="TextureRect" parent="Panel/VBox/AnimationPlayerHBox"]
margin_left = 750.0
margin_right = 774.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "No AnimationPlayer node selected. Can't proceed"
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationNameHBox" type="HBoxContainer" parent="Panel/VBox"]
margin_top = 485.0
margin_right = 774.0
margin_bottom = 509.0
rect_clip_content = true
script = ExtResource( 13 )

[node name="Label" type="Label" parent="Panel/VBox/AnimationNameHBox"]
margin_top = 2.0
margin_right = 150.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Animation Name:"

[node name="MenuButton" type="MenuButton" parent="Panel/VBox/AnimationNameHBox"]
margin_left = 154.0
margin_right = 746.0
margin_bottom = 24.0
rect_clip_content = true
size_flags_horizontal = 3
text = "Please select an AnimationPlayer above before selecting animation."
icon = ExtResource( 25 )
flat = false
clip_text = true
align = 0
expand_icon = true

[node name="WarningIcon" type="TextureRect" parent="Panel/VBox/AnimationNameHBox"]
margin_left = 750.0
margin_right = 774.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "No AnimationPlayer node selected. Can't proceed"
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioTrackHBox" type="HBoxContainer" parent="Panel/VBox"]
margin_top = 524.0
margin_right = 774.0
margin_bottom = 548.0
script = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBox/AudioTrackHBox"]
margin_top = 2.0
margin_right = 300.0
margin_bottom = 22.0
text = "Nodepath to AudioStreamPlayer:"

[node name="Button" parent="Panel/VBox/AudioTrackHBox" instance=ExtResource( 2 )]
margin_left = 304.0
margin_right = 746.0
margin_bottom = 24.0
text = "Please select an AudioStreamPlayer node."
expand_icon = true
NO_NODE_FOUND = "No node found at tree."
owner_reference = "anim_audioPlayer"
node_type = "AudioStreamPlayer"

[node name="WarningIcon" type="TextureRect" parent="Panel/VBox/AudioTrackHBox"]
margin_left = 750.0
margin_right = 774.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "No AudioStreamPlayer node selected. Can't proceed"
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioKeyHBox" type="HBoxContainer" parent="Panel/VBox"]
margin_top = 563.0
margin_right = 774.0
margin_bottom = 587.0
script = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBox/AudioKeyHBox"]
margin_top = 2.0
margin_right = 200.0
margin_bottom = 22.0
text = "Audio Keyframe Clip:"

[node name="Button" type="MenuButton" parent="Panel/VBox/AudioKeyHBox"]
margin_left = 204.0
margin_right = 746.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Please select AudioStreamPlayer, AnimationPlayer and An..."
icon = ExtResource( 25 )
flat = false
clip_text = true
align = 0
expand_icon = true

[node name="WarningIcon" type="TextureRect" parent="Panel/VBox/AudioKeyHBox"]
margin_left = 750.0
margin_right = 774.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "No AnimationPlayer node selected."
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimateButton" type="Button" parent="Panel/VBox"]
margin_left = 237.0
margin_top = 602.0
margin_right = 537.0
margin_bottom = 650.0
rect_min_size = Vector2( 300, 48 )
size_flags_horizontal = 6
text = "Generate Lipsync Animation"

[node name="RectHandlers" parent="Panel" instance=ExtResource( 35 )]
modulate = Color( 1, 1, 1, 0 )
_windowRect = NodePath("..")

[node name="HandlerTop" parent="Panel/RectHandlers" index="0"]
margin_right = 794.0
handler_direction = 0
_windowRect = NodePath("../..")

[node name="HandlerBottom" parent="Panel/RectHandlers" index="1"]
margin_top = 660.0
margin_right = 794.0
margin_bottom = 670.0
_windowRect = NodePath("../..")

[node name="HandlerLeft" parent="Panel/RectHandlers" index="2"]
margin_bottom = 670.0
_windowRect = NodePath("../..")

[node name="HandlerRight" parent="Panel/RectHandlers" index="3"]
margin_left = 784.0
margin_right = 794.0
margin_bottom = 670.0
_windowRect = NodePath("../..")
[connection signal="pressed" from="Panel/VBox/AnimateButton" to="." method="_on_AnimateButton_pressed"]

[editable path="Panel/RectHandlers"]
